tests/ui/parser/issues/issue-84104.stderr
error: this file contains an unclosed delimiter
  --> $DIR/issue-84104.rs:2:13
   |
LL | #[i=i::<ښܖ<
   |  -          ^
   |  |
   |  unclosed delimiter

error: aborting due to previous error

