tests/ui/parser/issues/issue-84104.rs
// error-pattern: this file contains an unclosed delimiter
#[i=i::<ښܖ<
